<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home_patient"
        android:title="@string/title_home_doctor"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/nav_topics_patient"
        android:title="@string/title_topics_patient"
        android:icon="@drawable/ic_layers" />

    <item android:id="@+id/nav_following_topics"
        android:icon="@drawable/followd_topics"
        android:title="@string/title_following_topics"/>

    <item android:id="@+id/nav_chat_patient"
        android:icon="@drawable/ic_chat_patient"
        android:title="@string/title_chat_patient"/>

    <item android:id="@+id/nav_profile_patient"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile_doctor"/>

</menu>